Fix courses index page sort icons contrast
fixes LMA-36

flag=none

test plan:
- As a user with at least one enrollment, navigate
to all courses.
> Verify that the icons constrasts with the
background.
NOTE: I noticed that after darken the original color,
the user couldn't notice the difference when the sort
is applied or not. So based on what we have in INST-UI,
I'm using a contrasted gray in case it's not applied
and a constrasted blue when the sorting is applied.

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/375187
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Luis Hilario <luis.hilario@instructure.com>
Product-Review: Peter Budavari <peter.budavari@instructure.com>

--- a/app/stylesheets/bundles/course_list.scss
+++ b/app/stylesheets/bundles/course_list.scss
@@ -37,9 +37,9 @@
     }
   }
   .course-list-sort-icon {
-    color: #E8EAEC;
+    color: $ic-color-medium;
     &.sorted {
-      color: $ic-font-color-dark;
+      color: $electric;
     }
   }
   .course-list-column-header {
